# ucpd-incident-reporting

./: .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  app.py  app.yaml  cloudbuild.yaml  eslint.config.js  pyproject.toml  requirements.txt  setup.sh
.github/: pull_request_template.md
.github/workflows/: deploy-to-app-engine.yml  format-and-fail.yml  validate-requirements.yml
incident_reporting/: __main__.py  main.py
incident_reporting/assets/: custom.css  mvp.css
incident_reporting/models/: incident.py
incident_reporting/pages/: ag-grid.py  home.py  map.py  spreadsheet.py  table.py  time_histogram.py
incident_reporting/static/: accessibility.min.js  dataTables.min.css  drilldown.min.js  exporting.min.js  highcharts-more.min.js  highcharts.min.js
incident_reporting/static/css/: classless.css  custom.css  mvp.css
incident_reporting/static/favicon/: site.webmanifest
incident_reporting/static/js/: hourly_summation.js  thirty_day_map.js  yearly_summation.js  yearly_table.js
incident_reporting/templates/: base.html  home.html  hourly_summation.html  thirty_day_map.html  yearly_summation.html  yearly_table.html
incident_reporting/utils/: constants.py  functions.py  season_functions.py
