[tool.poetry]
name = "ucpd-incident-reporting"
version = "0.1.0"
description = "This application makes use of scraped incidents from the UCPD Daily Incident Reports and displays them in a handful of ways."
authors = ["michplunkett"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.4.0"
google-cloud-ndb = "^2.2.2"
google-cloud-logging = "^3.8.0"
cachetools = "^5.3.1"
polars = "^0.19.8"
dash = "^2.14.0"
gunicorn = "^21.2.0"
pyarrow = "^14.0.1"
pandas = "^2.1.4"
dash-ag-grid = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
