[tool.poetry]
name = "ucpd-incident-reporting"
version = "0.1.0"
description = "This application makes use of scraped incidents from the UCPD Daily Incident Reports and displays them in a handful of ways."
authors = ["michplunkett"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.4.0"
google-cloud-logging = "^3.8.0"
polars = "^0.19.8"
fastapi = "^0.114.0"
jinja2 = "^3.1.2"
pyarrow = "^16.1.0"
pandas = "^2.2.2"
gunicorn = "^22.0.0"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
google-cloud-ndb = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
