[project]
name = "ucpd-incident-reporting"
version = "0.1.0"
description = "This application makes use of scraped incidents from the UCPD Daily Incident Reports and displays them in a handful of ways."
authors = ["michplunkett"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=5.5.0",
    "fastapi>=0.115.6",
    "google-cloud-logging>=3.11.3",
    "google-cloud-ndb>=2.3.2",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.4",
    "pandas>=2.2.3",
    "polars>=1.17.1",
    "pre-commit>=4.0.1",
    "pyarrow>=18.1.0",
    "uvicorn[standard]>=0.32.1",
]
